# raptor-cute

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  CREDITS.md  README.md  Rakefile  TODO.md  run.sh
.sourcekit-lsp/: config.json
.zed/: tasks.json
assets/shaders/: noop.shd
assets/sprites/: alan.ase  bon_bon.ase  explosion.ase  player_ship.ase  start.ase
cmake/: CuteFramework.cmake  StandardProjectSettings.cmake  cute.cmake
content/: background.aseprite  boosters.aseprite  lips.aseprite  player_beam.aseprite
include/: cute.shim.h  module.modulemap
src/: CMakeLists.txt  ECS.swift  Enemy.swift  Explosion.swift  Game.swift  Player.swift  PlayerBeam.swift  State.swift  main.swift
src/App/: App.swift  CMakeLists.txt
src/Bindings/: CMakeLists.txt  CuteFramework.swift
src/Components/: PositionComponent.swift
src/Cute/: Audio.swift  PlayDirection.swift  Sprite.swift
src/CuteFramework/: CF_Aabb.swift  CF_Audio.swift  CF_PlayDirection.swift  CF_Sprite.swift  CF_V2.swift  CMakeLists.txt  CuteFramework.swift
src/ECS/: Components.swift  ECS.swift  Entities.swift  Systems.swift
src/Engine/: CMakeLists.txt  DynamicLoader.swift  ECS.swift  main.swift
src/Game/: CMakeLists.txt  Enemy+Type.swift  Enemy.swift  Game.swift  GameOverScene.swift  GameplayScene.swift  MainMenuScene.swift  Player.swift  PlayerBeam.swift  SceneManager.swift  StarParticle.swift  State.swift
src/Game/Components/: PlayerController.swift  Position.swift  Velocity.swift
src/Game/Systems/: MovementSystem.swift  PlayerControllerSystem.swift
src/Native/: CMakeLists.txt
src/Native/include/: cute.shim.h
src/Raptor/: App.swift  Background.swift  CMakeLists.txt  Enemy+Type.swift  Enemy.swift  Explosion.swift  Game+Render.swift  Game+Update.swift  Game.swift  GameOverScene.swift  GameplayScene.swift  MainMenuScene.swift  Player.swift  PlayerBeam.swift  Scene.swift  SceneIdentifier.swift  SceneManager.swift  State.swift
src/Systems/: PlayerSystem.swift
